--- a/nosotros.html
+++ b/nosotros.html
@@ -6,10 +6,9 @@
 		<meta name="keywords" content="BETTY COLMAN">
 		<meta name="description" content="Quiénes somos? Conocenos y contactate con nosotros">
 		
-		<title>Nosotros//Zona Fit</title>
+		<title>Nosotros | ZonaFit</title>
 
 		<link href="https://fonts.googleapis.com/css2?family=Fjalla+One&display=swap" rel="stylesheet">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<!-- CSS only -->
 		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
@@ -19,37 +18,40 @@
 		<link rel="stylesheet" href="sass/css/css-estilo.css">
 	</head>
 	
-	<body id="nosotros">
-		<header class="header">
-			<div id="img-logo" class="animate__animated animate__pulse">
-			  	<a href="index.html" class="logo"><img src="multimedia/logo.png" alt="Logo" width="160" height="130"></a>
+	<body id="fondo">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+			<a class="navbar-brand animate__animated animate__zoomIn" href="index.html">
+			  <img class="logo-zonafit" src="multimedia/zonafit.png" alt="Zona Fit" width="150">
+		  	</a>
+			<button class="navbar-toggler estilo-btn" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+			  <span class="navbar-toggler-icon"></span>
+		  	</button>
+			<div class="collapse navbar-collapse secciones" id="navbarResponsive">
+			 	<ul class="navbar-nav ml-auto items">
+				  <li class="nav-item active">
+					  <a class="nav-link" href="index.html">Inicio
+							<span class="sr-only">(current)</span>
+					  </a>
+				  </li>
+				  <li class="nav-item">
+					  <a class="nav-link" href="servicios.html">Actividades</a>
+				  </li>
+				  <li class="nav-item">
+					  <a class="nav-link" href="nosotros.html">Nosotros</a>
+				  </li>
+			  </ul>
 			</div>
-  			<input class="menu-btn" type="checkbox" id="menu-btn" />
-  			<label class="menu-icon" for="menu-btn">
-  				<span class="navicon"></span>
-  			</label>
-  			<ul class="menu">
-    			<li>
-    				<a class="seccion-link" class="ini" href="index.html">Inicio</a>
-    			</li>
-    			<li>
-    				<a class="seccion-link" class="act" href="servicios.html">Actividades</a>
-    			</li>
-    			<li>
-    				<a class="seccion-link" class="nos" href="nosotros.html">Nosotros</a>
-    			</li>
-  			</ul>
-		</header>
+  		</nav>
 		<main>
-			<div class="how-section1">
+			<div class="how-section1 margen">
 				<div class="row" id="profeBetty">
 					<div class="col-md-6 how-img">
 						<img src="multimedia/betty.jpg" class="rounded-circle img-fluid" alt=""/>
 					</div>
 					<div class="col-md-6">
-						<h4>Hola! Soy Betty</h4>
-						<h4 class="subheading">Fundadora, Coordinadora, Instructora Y Maestra</h4>
-						<p class="text-muted">Soy Instructora de G.A.P, Fight Do y X55, además soy una apasionada maestra de grado. 
+						<h4 class="titulo">Hola! Soy Betty</h4>
+						<h4 class="subheading">Fundadora, Coordinadora, Instructora</h4>
+						<p class="text-muted">Soy Instructora de G.A.P, Fight Do y X55, además soy una apasionada docente. 
 							Las vueltas de la vida me llevaron a crear este espacio, el cual se volvió más que un simple gimnasio, es un lugar en el cual se prioriza la Energía Positiva, para brindarle a nuestro día a día salud física y mental. 
 							Busco constantemente capacitarme y ampliar mis conocimientos, para brindarle calidad y diversidad, según las necesidades de cada persona que elige a Zona Fit.
 						</p> 
@@ -64,56 +66,71 @@
 						<p class="text-muted">
 							Gracias por visitar nuestro sitio!
 						</p>
-						
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-6">
-						<h4>Get hired quickly</h4>
-									<h4 class="subheading">GetLance makes it easy to connect with clients and begin doing great work.</h4>
-									<p class="text-muted">Streamlined hiring. GetLance’s sophisticated algorithms highlight projects you’re a great fit for.
-										Top Rated and Rising Talent programs. Enjoy higher visibility with the added status of prestigious programs.
-										Do substantial work with top clients. GetLance pricing encourages freelancers to use GetLance for repeat relationships with their clients.</p>
-					</div>
-					<div class="col-md-6 how-img">
-						<img src="https://image.ibb.co/cHgKnU/Work_Section2_freelance_img2.png" class="rounded-circle img-fluid" alt=""/>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-6 how-img">
-						 <img src="https://image.ibb.co/ctSLu9/Work_Section2_freelance_img3.png" class="rounded-circle img-fluid" alt=""/>
-					</div>
-					<div class="col-md-6">
-						<h4>Work efficiently, effectively.</h4>
-									<h4 class="subheading">With GetLance, you have the freedom and flexibility to control when, where, and how you work. Each project includes an online workspace shared by you and your client, allowing you to:</h4>
-									<p class="text-muted">Send and receive files. Deliver digital assets in a secure environment.
-										Share feedback in real time. Use GetLance Messages to communicate via text, chat, or video.
-										Use our mobile app. Many features can be accessed on your mobile phone when on the go.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-md-6">
-						<h4>Get paid on time</h4>
-									<h4 class="subheading">All projects include GetLance Payment Protection — helping ensure that you get paid for all work successfully completed through the freelancing website.</h4>
-									<p class="text-muted">All invoices and payments happen through GetLance. Count on a simple and streamlined process.
-										Hourly and fixed-price projects. For hourly work, submit timesheets through GetLance. For fixed-price jobs, set milestones and funds are released via GetLance escrow features.
-										Multiple payment options. Choose a payment method that works best for you, from direct deposit or PayPal to wire transfer and more.</p>
-					</div>
-					<div class="col-md-6 how-img">
-						<img src="https://image.ibb.co/gQ9iE9/Work_Section2_freelance_img4.png" class="rounded-circle img-fluid" alt=""/>
 					</div>
 				</div>
 			</div>
 		</main>
-
-		<footer>
-		<a href="#nosotros">Ir arriba</a>
+		<section class="galeria"> 
+			<div class="row">
+				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+					<div class="bg-white rounded shadow-sm">
+						<img src="https://lh3.googleusercontent.com/SGyfuH78FQhcwOc-9jo8__LnpMqYh9XqQb274OqNpyW8yvvEvMLSu3OGCMFpFUUy43to6R8MvDAnxT-rNRw7HBSH6d5CUjyzuMv7tE3bIyLPKkIC-5Ahud9KObw6vgLC3t6oNcmiff42KLY9yMeCWughBRw9XSbhprUJP-dfn9uFEE4zJdQ0UrChw4EeHlRSHUxfcaejbgXTGC08VEWstidR0ccenA1K1EnMKM3Rw4ElCSicr1_x88f2TkP1nRPyBAutacT5i7WcEkKog6MrHY6WA2Kmd3tBd8BSySfMNb-WtmphsyXTLT_D6j6b0XncvLlRvje7aB3nEwLGlQPJQSKmFjYLwHnh_o2pTdS5vnZvhX7RvyYnS05UCwMvGi4wcCwlbs017ruALILCWMf5ayMNoohIC3X_dMz2-DqeeZdGbtaLcwFNpo3hcJo3wrHdAx-fRJeNjGimPX0WbfSpris3CkdktEUERK27TJfpQ33XffNPVdEZs12MIFLKH-E5lzeaJuHNI992VrzASOX5k9t1sU471ypeUJzDLS3PmiklJu5ywwdsTeeid1nTICAKHnTWSPWKVTmjN8t_z8cGjlXmfVqBH6RItXEfNr5Enb0dFHSWYNgKqsRwHZQOcCW-MllBMnbJwGBH1oWFfIwz9mbxb-TDMenBrxhYKxptKLpiJXUJKYwSl20RguFsZ8c=w1280-h960-no?authuser=0" class="img-fluid card-img-top">
+					</div>
+				</div>
+				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+					<div class="bg-white rounded shadow-sm">
+						<img src="https://lh3.googleusercontent.com/u1-QsejR8fq9nuTCkHKx7LVERYmdUtdvkZB1QO4Nl9b98Y5chLGNDLhOeoPJN2JiBJqT3EAEDDIINnXLZtNBf-cFR1odUPWjOj3Mm48nWYvhx5pknAJb990aEIM4ET1oTJ1FTCzoAyO4sb6BWL97aNXfAN5IIJiJU9ovzX9_1K-ceDnoLT6UYu7Hsm2_GCwMWqVrLlN1zBtL9nuJLzvkuMn8xVypv-QWXmPalZ34OHpr_bmA0dezaCsCfWdQLm78amenreX5P-yKiieiNicyfvbhKOCqVQXfbtPHVYXu4OV8kTRahA8djIx24jq19ji_4mXgp-R9sLdBsIu4MqpV1jSSbZRsZ_Vgg-iQKXERkF9V_dAr346Fs-OOaNjdSpWhUa90LHxr68sgFVxmk4wKmyb9BMO8ALCZmG6A89MkvEmv440hIqs_mKUp2PNoa1E0ETlIXDg2xeun9eriWmytXUfK5H5aoWvMoELndQDWoP9iG9UhY4AQIhiZciVsrqAIfaOTyit7kvz9oWoJhXx0dWdMXcpgMQb11PXDV8mU0Dcn_ygW-mf3ldqvkhi-osS0c0MpWsxiz-1GbLiZV7ZycOl2czNU3r8AodxB10wfH96WFXF-aOeRzBwk8Pvm6FIQ_seiytjIheaLDovz_KMJK2txbRWCFqnpVqIjhKJMZQlEC8ZFZe_RoavfEFWxNuU=w1280-h960-no?authuser=0" class="img-fluid card-img-top">
+					</div>
+				</div>
+				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+					<div class="bg-white rounded shadow-sm">
+						<img src="https://lh3.googleusercontent.com/n751viMZ2U1yWI9sgkJyVohHInKjhwSHXl-Ob7pHRL9eYlYpMKxBVRLWEXfSuPhiXRqM-1L6873p366GJ7PBxl6D15kMNXSBh3OoCoM_EJvPqzKDp5rMmf0Mony4jUeEZt2sLX7kiDy-aTYg2pEfVTc3OuBT6XDueZRA_2swclvn_GKsN1d0nzddxySKpSt6qd22f_FXvVbyrpYKmRP1C3h64TPdc7cBoqGeJqil-od1etUCvQBQRzvZtATjxUQDFZG8GD8U-4so7LSZoW7bu2oQ25a71qgOym0tHDkDXCdXZUT2T_1PwDNAFPB1A5G7_43HXIzfWANxUogQmfL3L1pVPxus25XcQfW6XN3SJFWuQE9bVBwTIK6edLfmgUU4dyFxnER6sYWfYb-NCEtZTlnAiPcAme6RUrnQoIRObsUEdVzDhm9MpN4Pig9_Ui2WruySrmSKXCOwEqYSK-IHqPpH3FaZ0wNZX9OdVefDeJOZ7sIHoeSUFdiBHMABgLRDkgFWKCFbOKz1n2x_35JTzUoTks9d7rHqdnTYU2nAQKLENBZY14VjJatDca_sCxOaX9Fh2GCItu9ozvhNtnj6_KpX3jGpSE7a5rJJJl_TW7IVKD7w2nhGNoEP2atQ-IEG-tLb4N9QwNFQLC03I3otO8BJHYR2Pm1qtN0z05b_YqB0Fy_WxA4unpPzaPREaQc=w1280-h960-no?authuser=0" alt="" class="img-fluid card-img-top">
+					</div>
+				</div>
+				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+					<div class="bg-white rounded shadow-sm">
+						<img src="https://lh3.googleusercontent.com/EQjvNeYrAH80J0R_sKhXG_HWDNASQoEvuuCAekcddEPtDpT0RRetkj9OIhDbIe-Gg9zMK-oSF1zohAVeWaABJGjvU_W7ihMYm6sUNZ9YeExc2xCPcKTTd4x5eyhAdodaB-iPQ7-0f_W_yF7HFrd16LihlwIEUegy6zhF6C9OSZslzJScKdxyuOONdJktKFJZme2kCM0w3Vg5JzuQpAiTmTkwNMPvHhrN8RXdfRf9MR9vDCFVRNzCzUdPIkCcWVO3DH3TFEPx0P6uCXYcfqlaOf9NshUyHOnaJ3pTtiJAEHIZGnDUrV7ckiWoWTps1fngJtKVZ6QUkn1p-0n0ktzP7_OCeSJkGKqRO-BvoPkmCdUNP9uQO5QCsEi3rxYyEaKpZYiMUTwS9Fb9VgqQ_gTdnxCQYv3_mnMtxMYIhLhcUsfiAqD0G4t4mo_STu1f3MzSJ9M-xozI2gFYr4-p9ZG_CCwFR5u1FTRTtE7M3CUgwZLWCq4d6Vh9hSIzoX7llTE-QRNPqo4isTrrzVdFTPPHdnzoFgrjh2Y_BLFF-av3blfpCgSGl9aI52GfjYF3T3ldyfK0T4276sAu7zTNVwVrBRTufCqnz0kNTedZ6APFQ182Idhc98VeLKhH3XrJdvUTqojJdKQhwXcNA1ZAJkb32bwK1jFkWyZ5WUYebEFwp1O-0F_QWMbl3HEM8H73pzo=w1280-h960-no?authuser=0" class="img-fluid card-img-top">
+					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+					<div class="bg-white rounded shadow-sm">
+						<img src="multimedia/img4.jpg" alt="" class="img-fluid card-img-top">
+					</div>
+				</div>
+			
+				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+					<div class="bg-white rounded shadow-sm">
+						<img src="multimedia/img1.jpg" class="img-fluid card-img-top">
+					</div>
+				</div>
+				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+					<div class="bg-white rounded shadow-sm">
+						<img src="multimedia/img2.jpg" alt="" class="img-fluid card-img-top">
+					</div>
+				</div>
+				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
+					<div class="bg-white rounded shadow-sm">
+						<img src="multimedia/img3.jpg" alt="" class="img-fluid card-img-top">
+					</div>
+				</div>
+			</div>
+		</section>
+		<footer class="flex-rw">
+			<section class="footer-social-section flex-rw">
+				<span class="footer-social-overlap social-connect size-letter" id="color-footer"> <strong>CONTACTATE</strong> </span>
+				<span class="footer-social-overlap footer-social-icons-wrapper">
+					<a href="https://www.facebook.com/zonafit" class="generic-anchor" target="_blank" title="Facebook" itemprop="significantLink"><i class="fa fa-facebook"></i></a>
+					<a href="http://instagram.com/zonafit_ep" class="generic-anchor" target="_blank" title="Instagram" itemprop="significantLink"><i class="fa fa-instagram"></i></a>
+					<a href="https://api.whatsapp.com/send?phone=543447415781Responsive=Hola!%20Quiero%20saber%20más%20info%20sobre" class="generic-anchor" target="_blank" title="WhastApp" itemprop="significantLink"><i class="fa fa-whatsapp"></i></a>
+				</span>
+			</section>
 		</footer>
-
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+		<script src="https://cdn.linearicons.com/free/1.0.0/svgembedder.min.js"></script>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-		<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	</body>
 </html>
