--- a/servicios.html
+++ b/servicios.html
@@ -63,7 +63,7 @@
 					<div class="row mt-30">
 						<div class="col-md-6 x55" id="x55">
 							<div>
-								<img src="multimedia/logoX55.png" alt="X55-logo">
+								<img src="multimedia/logox55.PNG" alt="X55-logo">
 							</div>
 							<div>
 								Diseñado especialmente para quemar calorías y al mismo tiempo tonificar al máximo piernas y glúteos.
