--- a/nosotros.html
+++ b/nosotros.html
@@ -74,22 +74,22 @@
 			<div class="row">
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm">
-						<img src="https://lh3.googleusercontent.com/SGyfuH78FQhcwOc-9jo8__LnpMqYh9XqQb274OqNpyW8yvvEvMLSu3OGCMFpFUUy43to6R8MvDAnxT-rNRw7HBSH6d5CUjyzuMv7tE3bIyLPKkIC-5Ahud9KObw6vgLC3t6oNcmiff42KLY9yMeCWughBRw9XSbhprUJP-dfn9uFEE4zJdQ0UrChw4EeHlRSHUxfcaejbgXTGC08VEWstidR0ccenA1K1EnMKM3Rw4ElCSicr1_x88f2TkP1nRPyBAutacT5i7WcEkKog6MrHY6WA2Kmd3tBd8BSySfMNb-WtmphsyXTLT_D6j6b0XncvLlRvje7aB3nEwLGlQPJQSKmFjYLwHnh_o2pTdS5vnZvhX7RvyYnS05UCwMvGi4wcCwlbs017ruALILCWMf5ayMNoohIC3X_dMz2-DqeeZdGbtaLcwFNpo3hcJo3wrHdAx-fRJeNjGimPX0WbfSpris3CkdktEUERK27TJfpQ33XffNPVdEZs12MIFLKH-E5lzeaJuHNI992VrzASOX5k9t1sU471ypeUJzDLS3PmiklJu5ywwdsTeeid1nTICAKHnTWSPWKVTmjN8t_z8cGjlXmfVqBH6RItXEfNr5Enb0dFHSWYNgKqsRwHZQOcCW-MllBMnbJwGBH1oWFfIwz9mbxb-TDMenBrxhYKxptKLpiJXUJKYwSl20RguFsZ8c=w1280-h960-no?authuser=0" class="img-fluid card-img-top">
+						<img src="multimedia/img5.jpeg" class="img-fluid card-img-top">
 					</div>
 				</div>
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm">
-						<img src="https://lh3.googleusercontent.com/u1-QsejR8fq9nuTCkHKx7LVERYmdUtdvkZB1QO4Nl9b98Y5chLGNDLhOeoPJN2JiBJqT3EAEDDIINnXLZtNBf-cFR1odUPWjOj3Mm48nWYvhx5pknAJb990aEIM4ET1oTJ1FTCzoAyO4sb6BWL97aNXfAN5IIJiJU9ovzX9_1K-ceDnoLT6UYu7Hsm2_GCwMWqVrLlN1zBtL9nuJLzvkuMn8xVypv-QWXmPalZ34OHpr_bmA0dezaCsCfWdQLm78amenreX5P-yKiieiNicyfvbhKOCqVQXfbtPHVYXu4OV8kTRahA8djIx24jq19ji_4mXgp-R9sLdBsIu4MqpV1jSSbZRsZ_Vgg-iQKXERkF9V_dAr346Fs-OOaNjdSpWhUa90LHxr68sgFVxmk4wKmyb9BMO8ALCZmG6A89MkvEmv440hIqs_mKUp2PNoa1E0ETlIXDg2xeun9eriWmytXUfK5H5aoWvMoELndQDWoP9iG9UhY4AQIhiZciVsrqAIfaOTyit7kvz9oWoJhXx0dWdMXcpgMQb11PXDV8mU0Dcn_ygW-mf3ldqvkhi-osS0c0MpWsxiz-1GbLiZV7ZycOl2czNU3r8AodxB10wfH96WFXF-aOeRzBwk8Pvm6FIQ_seiytjIheaLDovz_KMJK2txbRWCFqnpVqIjhKJMZQlEC8ZFZe_RoavfEFWxNuU=w1280-h960-no?authuser=0" class="img-fluid card-img-top">
+						<img src="multimedia/img6.jpg" class="img-fluid card-img-top">
 					</div>
 				</div>
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm">
-						<img src="https://lh3.googleusercontent.com/n751viMZ2U1yWI9sgkJyVohHInKjhwSHXl-Ob7pHRL9eYlYpMKxBVRLWEXfSuPhiXRqM-1L6873p366GJ7PBxl6D15kMNXSBh3OoCoM_EJvPqzKDp5rMmf0Mony4jUeEZt2sLX7kiDy-aTYg2pEfVTc3OuBT6XDueZRA_2swclvn_GKsN1d0nzddxySKpSt6qd22f_FXvVbyrpYKmRP1C3h64TPdc7cBoqGeJqil-od1etUCvQBQRzvZtATjxUQDFZG8GD8U-4so7LSZoW7bu2oQ25a71qgOym0tHDkDXCdXZUT2T_1PwDNAFPB1A5G7_43HXIzfWANxUogQmfL3L1pVPxus25XcQfW6XN3SJFWuQE9bVBwTIK6edLfmgUU4dyFxnER6sYWfYb-NCEtZTlnAiPcAme6RUrnQoIRObsUEdVzDhm9MpN4Pig9_Ui2WruySrmSKXCOwEqYSK-IHqPpH3FaZ0wNZX9OdVefDeJOZ7sIHoeSUFdiBHMABgLRDkgFWKCFbOKz1n2x_35JTzUoTks9d7rHqdnTYU2nAQKLENBZY14VjJatDca_sCxOaX9Fh2GCItu9ozvhNtnj6_KpX3jGpSE7a5rJJJl_TW7IVKD7w2nhGNoEP2atQ-IEG-tLb4N9QwNFQLC03I3otO8BJHYR2Pm1qtN0z05b_YqB0Fy_WxA4unpPzaPREaQc=w1280-h960-no?authuser=0" alt="" class="img-fluid card-img-top">
+						<img src="multimedia/img7.jpg" alt="" class="img-fluid card-img-top">
 					</div>
 				</div>
 				<div class="col-xl-3 col-lg-4 col-md-6 mb-4">
 					<div class="bg-white rounded shadow-sm">
-						<img src="https://lh3.googleusercontent.com/EQjvNeYrAH80J0R_sKhXG_HWDNASQoEvuuCAekcddEPtDpT0RRetkj9OIhDbIe-Gg9zMK-oSF1zohAVeWaABJGjvU_W7ihMYm6sUNZ9YeExc2xCPcKTTd4x5eyhAdodaB-iPQ7-0f_W_yF7HFrd16LihlwIEUegy6zhF6C9OSZslzJScKdxyuOONdJktKFJZme2kCM0w3Vg5JzuQpAiTmTkwNMPvHhrN8RXdfRf9MR9vDCFVRNzCzUdPIkCcWVO3DH3TFEPx0P6uCXYcfqlaOf9NshUyHOnaJ3pTtiJAEHIZGnDUrV7ckiWoWTps1fngJtKVZ6QUkn1p-0n0ktzP7_OCeSJkGKqRO-BvoPkmCdUNP9uQO5QCsEi3rxYyEaKpZYiMUTwS9Fb9VgqQ_gTdnxCQYv3_mnMtxMYIhLhcUsfiAqD0G4t4mo_STu1f3MzSJ9M-xozI2gFYr4-p9ZG_CCwFR5u1FTRTtE7M3CUgwZLWCq4d6Vh9hSIzoX7llTE-QRNPqo4isTrrzVdFTPPHdnzoFgrjh2Y_BLFF-av3blfpCgSGl9aI52GfjYF3T3ldyfK0T4276sAu7zTNVwVrBRTufCqnz0kNTedZ6APFQ182Idhc98VeLKhH3XrJdvUTqojJdKQhwXcNA1ZAJkb32bwK1jFkWyZ5WUYebEFwp1O-0F_QWMbl3HEM8H73pzo=w1280-h960-no?authuser=0" class="img-fluid card-img-top">
+						<img src="multimedia/img8.jpeg" class="img-fluid card-img-top">
 					</div>
 				</div>
 			</div>
